--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 0.109.0
+      HUGO_VERSION: latest
     steps:
       - name: Install Hugo CLI
         run: |
