--- a/data/en/team.yml
+++ b/data/en/team.yml
@@ -1,9 +1,9 @@
-title : "Meet with our Team"
-subtitle : "A Quality Experience Team with 4 years experience"
-title_icon : "fa-weixin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+title : "Meet with our Organizers"
+subtitle : "No Leader Just Together"
+title_icon : "fa-sitemap" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
 team_member:
   # team member loop
-  - name : "Vosgi Varduhi"
+  - name : "Aji Arya"
     image : "images/team/team1.jpg"
     designation : "Web Designer"
     social:
@@ -15,20 +15,16 @@ team_member:
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "gplus"
-        icon : "fa-google-plus" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
       - name : "linkdin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "dribble"
+      - name : "website"
         icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
   # team member loop
-  - name : "Robert Aleska"
+  - name : "Sartika Lestari"
     image : "images/team/team2.jpg"
     designation : "Web Designer"
     social:
@@ -40,42 +36,34 @@ team_member:
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "gplus"
-        icon : "fa-google-plus" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
       - name : "linkdin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "dribble"
+      - name : "website"
         icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
   # team member loop
-  - name : "Taline Voski"
+  - name : "Saputro Aryulianto"
     image : "images/team/team3.jpg"
-    designation : "Web Designer"
+    designation : "General/Infrastructure"
     social:
       - name : "fb"
         icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
+        link : "facebook.com/aryuliantos"
         
       - name : "twt"
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-      - name : "gplus"
-        icon : "fa-google-plus" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
+        link : "twitter.com/aryuliantos"
         
       - name : "linkdin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
+        link : "linkedin.com/in/aryulianto"
         
-      - name : "dribble"
+      - name : "website"
         icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
+        link : "aryulianto.com"
         
   # team member loop
   - name : "Alban Spencer"
@@ -90,15 +78,11 @@ team_member:
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "gplus"
-        icon : "fa-google-plus" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
       - name : "linkdin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "dribble"
+      - name : "website"
         icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
@@ -115,15 +99,11 @@ team_member:
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "gplus"
-        icon : "fa-google-plus" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
       - name : "linkdin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "dribble"
+      - name : "website"
         icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
@@ -140,15 +120,11 @@ team_member:
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "gplus"
-        icon : "fa-google-plus" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
       - name : "linkdin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "dribble"
+      - name : "website"
         icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
@@ -165,15 +141,11 @@ team_member:
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "gplus"
-        icon : "fa-google-plus" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
       - name : "linkdin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "dribble"
+      - name : "website"
         icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
@@ -190,14 +162,10 @@ team_member:
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "gplus"
-        icon : "fa-google-plus" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
       - name : "linkdin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "dribble"
+      - name : "website"
         icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
