--- a/data/en/team.yml
+++ b/data/en/team.yml
@@ -1,11 +1,11 @@
-title : "Meet with our Organizers"
-subtitle : "No Leader Just Together"
+title : "Meet with our Volunteers"
+subtitle : "If You See a Need, Take the Lead"
 title_icon : "fa-sitemap" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
 team_member:
   # team member loop
   - name : "Aji Arya"
     image : "images/team/team1.jpg"
-    designation : "Web Designer"
+    designation : "Infrastructure"
     social:
       - name : "fb"
         icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
@@ -24,9 +24,9 @@ team_member:
         link : "#"
         
   # team member loop
-  - name : "Sartika Lestari"
+  - name : "Bayu Aji"
     image : "images/team/team2.jpg"
-    designation : "Web Designer"
+    designation : "Artwork"
     social:
       - name : "fb"
         icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
@@ -46,8 +46,8 @@ team_member:
         
   # team member loop
   - name : "Saputro Aryulianto"
-    image : "images/team/team3.jpg"
-    designation : "General/Infrastructure"
+    image : "images/team/team4.jpg"
+    designation : "Infrastructure"
     social:
       - name : "fb"
         icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
@@ -66,30 +66,9 @@ team_member:
         link : "aryulianto.com"
         
   # team member loop
-  - name : "Alban Spencer"
+  - name : "Sartika Lestari"
     image : "images/team/team4.jpg"
-    designation : "Web Designer"
-    social:
-      - name : "fb"
-        icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-      - name : "twt"
-        icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-      - name : "linkdin"
-        icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-      - name : "website"
-        icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-  # team member loop
-  - name : "Vosgi Varduhi"
-    image : "images/team/team1.jpg"
-    designation : "Web Designer"
+    designation : "Public Relations"
     social:
       - name : "fb"
         icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
