--- a/data/id/team.yml
+++ b/data/id/team.yml
@@ -1,11 +1,11 @@
-title : "Meet with our Team"
-subtitle : "A Quality Experience Team with 4 years experience"
-title_icon : "fa-weixin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+title : "Meet with our Volunteers"
+subtitle : "If You See a Need, Take the Lead"
+title_icon : "fa-sitemap" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
 team_member:
   # team member loop
-  - name : "Vosgi Varduhi"
-    image : "images/team/team1.jpg"
-    designation : "Web Designer"
+  - name : "Aji Arya"
+    image : "images/team/arya.png"
+    designation : "Tenggarong"
     social:
       - name : "fb"
         icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
@@ -15,22 +15,81 @@ team_member:
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "gplus"
-        icon : "fa-google-plus" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+      - name : "linkdin"
+        icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        link : "#"
+        
+      - name : "website"
+        icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        link : "#"
+        
+  # team member loop
+  - name : "Bayu Aji"
+    image : "images/team/bayu.png"
+    designation : "Yogyakarta"
+    social:
+      - name : "fb"
+        icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        link : "#"
+        
+      - name : "twt"
+        icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
       - name : "linkdin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "dribble"
+      - name : "website"
+        icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        link : "#"
+        
+  # team member loop
+  - name : "Saputro Aryulianto"
+    image : "images/team/ary.png"
+    designation : "Bogor"
+    social:
+      - name : "fb"
+        icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        link : "facebook.com/aryuliantos"
+        
+      - name : "twt"
+        icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        link : "twitter.com/aryuliantos"
+        
+      - name : "linkdin"
+        icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        link : "linkedin.com/in/aryulianto"
+        
+      - name : "website"
+        icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        link : "aryulianto.com"
+        
+  # team member loop
+  - name : "Sartika Lestari"
+    image : "images/team/tika.png"
+    designation : "Bogor"
+    social:
+      - name : "fb"
+        icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        link : "#"
+        
+      - name : "twt"
+        icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        link : "#"
+        
+      - name : "linkdin"
+        icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        link : "#"
+        
+      - name : "website"
         icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
   # team member loop
   - name : "Robert Aleska"
     image : "images/team/team2.jpg"
-    designation : "Web Designer"
+    designation : "Surabaya"
     social:
       - name : "fb"
         icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
@@ -40,22 +99,18 @@ team_member:
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "gplus"
-        icon : "fa-google-plus" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
       - name : "linkdin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "dribble"
+      - name : "website"
         icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
   # team member loop
   - name : "Taline Voski"
     image : "images/team/team3.jpg"
-    designation : "Web Designer"
+    designation : "Condet"
     social:
       - name : "fb"
         icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
@@ -65,22 +120,18 @@ team_member:
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "gplus"
-        icon : "fa-google-plus" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
       - name : "linkdin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "dribble"
+      - name : "website"
         icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
   # team member loop
   - name : "Alban Spencer"
     image : "images/team/team4.jpg"
-    designation : "Web Designer"
+    designation : "Depok"
     social:
       - name : "fb"
         icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
@@ -90,114 +141,31 @@ team_member:
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "gplus"
-        icon : "fa-google-plus" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
       - name : "linkdin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "dribble"
+      - name : "website"
         icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
-        
-  # team member loop
-  - name : "Vosgi Varduhi"
-    image : "images/team/team1.jpg"
-    designation : "Web Designer"
-    social:
-      - name : "fb"
-        icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-      - name : "twt"
-        icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-      - name : "gplus"
-        icon : "fa-google-plus" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-      - name : "linkdin"
-        icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-      - name : "dribble"
-        icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-  # team member loop
-  - name : "Robert Aleska"
-    image : "images/team/team2.jpg"
-    designation : "Web Designer"
-    social:
-      - name : "fb"
-        icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-      - name : "twt"
-        icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-      - name : "gplus"
-        icon : "fa-google-plus" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-      - name : "linkdin"
-        icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-      - name : "dribble"
-        icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-  # team member loop
-  - name : "Taline Voski"
-    image : "images/team/team3.jpg"
-    designation : "Web Designer"
-    social:
-      - name : "fb"
-        icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-      - name : "twt"
-        icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-      - name : "gplus"
-        icon : "fa-google-plus" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-      - name : "linkdin"
-        icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-      - name : "dribble"
-        icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
+
   # team member loop
   - name : "Alban Spencer"
     image : "images/team/team4.jpg"
-    designation : "Web Designer"
+    designation : "Bekasi"
     social:
       - name : "fb"
         icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
-        
+
       - name : "twt"
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
-        
-      - name : "gplus"
-        icon : "fa-google-plus" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
+
       - name : "linkdin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
-        
-      - name : "dribble"
+
+      - name : "website"
         icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
