--- a/data/en/volunteers.yml
+++ b/data/en/volunteers.yml
@@ -1,5 +1,5 @@
 volunteers:
-  ########################## volunteer item loop ##########################
+  ########################## volunteers item loop ##########################
   - title : "Call for Volunteers"
     content : "The OpenStack & OpenInfra Indonesia community is opening opportunities for those of you who want to contribute to becoming new volunteers/admins"
     job_accordion:
