--- a/data/en/team.yml
+++ b/data/en/team.yml
@@ -88,7 +88,7 @@ team_member:
         
   # team member loop
   - name : "Robert Aleska"
-    image : "images/team/team2.jpg"
+    image : "images/team/team.png"
     designation : "Surabaya"
     social:
       - name : "fb"
@@ -109,7 +109,7 @@ team_member:
         
   # team member loop
   - name : "Taline Voski"
-    image : "images/team/team3.jpg"
+    image : "images/team/team.png"
     designation : "Condet"
     social:
       - name : "fb"
@@ -130,7 +130,7 @@ team_member:
         
   # team member loop
   - name : "Alban Spencer"
-    image : "images/team/team4.jpg"
+    image : "images/team/team.png"
     designation : "Depok"
     social:
       - name : "fb"
@@ -151,7 +151,7 @@ team_member:
 
   # team member loop
   - name : "Alban Spencer"
-    image : "images/team/team4.jpg"
+    image : "images/team/team.png"
     designation : "Bekasi"
     social:
       - name : "fb"
