--- a/data/id/team.yml
+++ b/data/id/team.yml
@@ -9,6 +9,27 @@ team_member:
     social:
       - name : "facebook"
         icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        link : "https://facebook.com"
+        
+      - name : "twitter"
+        icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        link : "#"
+        
+      - name : "linkedin"
+        icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        link : "#"
+        
+      - name : "website"
+        icon : "fa-chrome" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        link : "#"
+        
+  # team member loop
+  - name : "Bayu Aji"
+    image : "images/team/bayu.png"
+    designation : "Yogyakarta"
+    social:
+      - name : "facebook"
+        icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
       - name : "twitter"
@@ -20,28 +41,7 @@ team_member:
         link : "#"
         
       - name : "website"
-        icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-  # team member loop
-  - name : "Bayu Aji"
-    image : "images/team/bayu.png"
-    designation : "Yogyakarta"
-    social:
-      - name : "fb"
-        icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-      - name : "twt"
-        icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-      - name : "linkdin"
-        icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
-      - name : "website"
-        icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        icon : "fa-chrome" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
   # team member loop
@@ -49,123 +49,123 @@ team_member:
     image : "images/team/ary.png"
     designation : "Bogor"
     social:
-      - name : "fb"
+      - name : "facebook"
         icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "facebook.com/aryuliantos"
+        link : "https://facebook.com/aryuliantos"
         
-      - name : "twt"
+      - name : "twitter"
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "twitter.com/aryuliantos"
+        link : "https://twitter.com/aryuliantos"
         
-      - name : "linkdin"
+      - name : "linkedin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "linkedin.com/in/aryulianto"
+        link : "https://linkedin.com/in/aryulianto"
         
       - name : "website"
-        icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "aryulianto.com"
+        icon : "fa-chrome" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        link : "https://aryulianto.com"
         
   # team member loop
   - name : "Sartika Lestari"
     image : "images/team/tika.png"
     designation : "Bogor"
     social:
-      - name : "fb"
+      - name : "facebook"
         icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "twt"
+      - name : "twitter"
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "linkdin"
+      - name : "linkedin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
       - name : "website"
-        icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        icon : "fa-chrome" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
   # team member loop
   - name : "Robert Aleska"
-    image : "images/team/team2.jpg"
+    image : "images/team/team.png"
     designation : "Surabaya"
     social:
-      - name : "fb"
+      - name : "facebook"
         icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "twt"
+      - name : "twitter"
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "linkdin"
+      - name : "linkedin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
       - name : "website"
-        icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        icon : "fa-chrome" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
   # team member loop
   - name : "Taline Voski"
-    image : "images/team/team3.jpg"
+    image : "images/team/team.png"
     designation : "Condet"
     social:
-      - name : "fb"
+      - name : "facebook"
         icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "twt"
+      - name : "twitter"
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "linkdin"
+      - name : "linkedin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
       - name : "website"
-        icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        icon : "fa-chrome" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
   # team member loop
   - name : "Alban Spencer"
-    image : "images/team/team4.jpg"
+    image : "images/team/team.png"
     designation : "Depok"
     social:
-      - name : "fb"
+      - name : "facebook"
         icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "twt"
+      - name : "twitter"
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
-      - name : "linkdin"
+      - name : "linkedin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
         
       - name : "website"
-        icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        icon : "fa-chrome" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
 
   # team member loop
   - name : "Alban Spencer"
-    image : "images/team/team4.jpg"
+    image : "images/team/team.png"
     designation : "Bekasi"
     social:
-      - name : "fb"
+      - name : "facebook"
         icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
 
-      - name : "twt"
+      - name : "twitter"
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
 
-      - name : "linkdin"
+      - name : "linkedin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
 
       - name : "website"
-        icon : "fa-dribbble" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        icon : "fa-chrome" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
         link : "#"
