--- a/data/id/about.yml
+++ b/data/id/about.yml
@@ -14,8 +14,8 @@ company_profile:
     # profile tab item loop
     - name : "Sponsor"
       icon : "fa-usd" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-      title : "We Build Readymade Applications"
-      content : "Over the year we have lots of experience in our field. In sit amet massa sapien. Vestibulum diam turpis, gravida in lobortis id, ornare a eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sagittis nulla non elit dignissim suscipit. Duis lorem nulla, eleifend."
+      title : "Sponsor"
+      content : "Jika Anda tertarik untuk mengetahui lebih lanjut tentang bagaimana organisasi Anda dapat menjadi bagian dari komunitas ini, tinggalkan pesan kepada kami atau hubungi kami di sponsor@openinfra.id"
       
 ############################### funfact ##################################
 funfact:
