--- a/data/id/about.yml
+++ b/data/id/about.yml
@@ -8,14 +8,13 @@ company_profile:
     - name : "Siapa Kita"
       icon : "fa-info-circle" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
       title : "OpenStack & OpenInfra Indonesia"
-      content : "Sejak didirikan pada tahun 2018, Komunitas OpenStack dan OpenInfra Indonesia User Group bertujuan untuk memberikan dukungan dalam bentuk forum diskusi yang juga di dalamnya membuka peluang kontribusi ke dalam proyek - proyek Infrastruktur Terbuka.
-      Berada di bawah naungan Open Infrastructure Foundation/OIF(https://openinfra.dev) berkedudukan di Austin-US, saat ini, Grup Pengguna Indonesia dikelola langsung oleh Yayasan Suporter OpenInfra Indonesia dengan jumlah anggota saat ini sebanyak 1.546 (2022)."
+      content : "Sejak didirikan pada tahun 2018, Komunitas OpenStack dan OpenInfra Indonesia User Group bertujuan untuk memberikan dukungan dalam bentuk forum diskusi yang juga di dalamnya membuka peluang kontribusi ke dalam proyek - proyek Infrastruktur Terbuka. Berada di bawah naungan Open Infrastructure Foundation/OIF(https://openinfra.dev) berkedudukan di Austin-US, saat ini, Grup Pengguna Indonesia dikelola langsung oleh Yayasan Suporter OpenInfra Indonesia dengan jumlah anggota saat ini sebanyak 1.546 (2022)."
       
     # profile tab item loop
     - name : "Sponsor"
       icon : "fa-usd" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
       title : "Sponsor"
-      content : "Jika Anda tertarik untuk mengetahui lebih lanjut tentang bagaimana organisasi Anda dapat menjadi bagian dari komunitas ini, tinggalkan pesan kepada kami atau hubungi kami di sponsor@openinfra.id"
+      content : "Jika Anda tertarik untuk mengetahui lebih lanjut tentang bagaimana organisasi Anda dapat menjadi bagian dari komunitas ini, tinggalkan [pesan](https://www.openinfra.id/contact/) kepada kami atau email kami di sponsor@openinfra.id"
       
 ############################### funfact ##################################
 funfact:
