--- a/data/id/homepage.yml
+++ b/data/id/homepage.yml
@@ -64,7 +64,7 @@ slider:
         # button loop
         - label : "Submit"
           style : "solid"
-          link : "#"
+          link : "https://forms.gle/y73NYkS7294PK1259"
 
 
 ############################### Service ####################################
