--- a/data/id/team.yml
+++ b/data/id/team.yml
@@ -2,26 +2,29 @@ title : "Meet with our Volunteers"
 subtitle : "If You See a Need, Take the Lead"
 title_icon : "fa-sitemap" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
 team_member:
-  # team member loop
   - name : "Aji Arya"
     image : "images/team/arya.png"
     designation : "Tenggarong"
     social:
       - name : "facebook"
         icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "https://facebook.com"
-        
+        link : "https://facebook.com/ajiaryar"
+
       - name : "twitter"
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
+        link : "https://twitter.com/aryasaurus"
+
       - name : "linkedin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
-        
+        link : "https://www.linkedin.com/in/ajiarya/"
+
+      - name : "telegram"
+        icon : "fa-telegram" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+        link : "https://t.me/ajiaryar"
+
       - name : "website"
         icon : "fa-chrome" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
+        link : "https://blog.ajiarya.id"
         
   # team member loop
   - name : "Bayu Aji"
