--- a/data/id/emeritus.yml
+++ b/data/id/emeritus.yml
@@ -4,97 +4,10 @@ emeritus_subtitle : "Honorable Mention"
 emeritus_title_icon : "fa-medal"
 emeritus_member:
   - name : "Dendy Putra Delly"
-    image : "images/team/team.png"
-    designation : "Bogor"
-    social:
-      - name : "facebook"
-        icon : "fa-facebook"
-        link : ""
-        
-      - name : "twitter"
-        icon : "fa-twitter"
-        link : ""
-        
-      - name : "linkedin"
-        icon : "fa-linkedin"
-        link : ""
-        
-      - name : "telegram"
-        icon : "fa-telegram"
-        link : ""
-
-      - name : "website"
-        icon : "fa-chrome"
-        link : ""
-
+    city : "Bogor"
   - name : "Utian Ayuba"
-    image : "images/team/team.png"
-    designation : "Bogor"
-    social:
-      - name : "facebook"
-        icon : "fa-facebook"
-        link : ""
-        
-      - name : "twitter"
-        icon : "fa-twitter"
-        link : ""
-        
-      - name : "linkedin"
-        icon : "fa-linkedin"
-        link : ""
-        
-      - name : "telegram"
-        icon : "fa-telegram"
-        link : ""
-
-      - name : "website"
-        icon : "fa-chrome"
-        link : ""
-
-  - name : "Dendy Putra Delly"
-    image : "images/team/team.png"
-    designation : "Bogor"
-    social:
-      - name : "facebook"
-        icon : "fa-facebook"
-        link : ""
-        
-      - name : "twitter"
-        icon : "fa-twitter"
-        link : ""
-        
-      - name : "linkedin"
-        icon : "fa-linkedin"
-        link : ""
-        
-      - name : "telegram"
-        icon : "fa-telegram"
-        link : ""
-
-      - name : "website"
-        icon : "fa-chrome"
-        link : ""
-
-  - name : "Utian Ayuba"
-    image : "images/team/team.png"
-    designation : "Bogor"
-    social:
-      - name : "facebook"
-        icon : "fa-facebook"
-        link : ""
-        
-      - name : "twitter"
-        icon : "fa-twitter"
-        link : ""
-        
-      - name : "linkedin"
-        icon : "fa-linkedin"
-        link : ""
-        
-      - name : "telegram"
-        icon : "fa-telegram"
-        link : ""
-
-      - name : "website"
-        icon : "fa-chrome"
-        link : ""
+    city : "Jakarta"
+  - name : "B"
+    city : "Jakarta"
+  - name : "A"
+    city : "Jakarta"
