--- a/data/id/emeritus.yml
+++ b/data/id/emeritus.yml
@@ -1,5 +1,5 @@
 # Emeritus
-emeritus_title : "Emeritus"
+emeritus_title : "Anggota Emeritus"
 emeritus_subtitle : "Honorable Mention"
 emeritus_title_icon : "fa-medal"
 emeritus_member:
