--- a/data/id/emeritus.yml
+++ b/data/id/emeritus.yml
@@ -6,8 +6,16 @@ emeritus_member:
   - name : "Dendy Putra Delly"
     city : "Bogor"
   - name : "Utian Ayuba"
-    city : "Jakarta"
-  - name : "B"
-    city : "Jakarta"
-  - name : "A"
-    city : "Jakarta"
+    city : "Bogor"
+  - name : "Yoga Dwi Goesty"
+    city : "Tanggerang"
+  - name : "Syah Dwi Prihatmoko"
+    city : "Bogor"
+  - name : "Rizki Fauzi"
+    city : "Bogor"
+  - name : "Samsul Ma'arif"
+    city : "Malang"
+  - name : "Lutfi As Syafii"
+    city : "Purwokerto"
+  - name : "Rohim Prima"
+    city : "Depok"
