--- a/data/en/team.yml
+++ b/data/en/team.yml
@@ -149,7 +149,7 @@ team_member:
         link : "https://t.me/rafiryd"
 
   # team member loop
-  - name : "Alban Spencer"
+  - name : "Arya Pramudika"
     image : "images/team/dika.png"
     designation : "Madiun"
     social:
