Translate data [ID] Speakers List

--- a/data/id/speakers.yml
+++ b/data/id/speakers.yml
@@ -1,3 +1,3 @@
-title: Our Awesome Speakers!
-subtitle: Reach the speaker
+title: Pembicara-pembicara keren!
+subtitle: Capai pembicara kami
 icon: fa-solid fa-microphone
