--- a/data/id/team.yml
+++ b/data/id/team.yml
@@ -1,5 +1,5 @@
-title : "Meet with our Volunteers"
-subtitle : "If You See a Need, Take the Lead"
+title : "Bertemu dengan relawan kami"
+subtitle : "Jika Anda melihat sebuah kebutuhan, ambil inisiatif"
 title_icon : "fa-sitemap" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
 team_member:
   - name : "Aji Arya"
