--- a/data/en/faq.yml
+++ b/data/en/faq.yml
@@ -1,8 +1,8 @@
 faq:
   ########################## faq item loop ##########################
   - title : "Community & Membership"
-    job_accordion:
-      # job accordion loop item
+    faq_accordion:
+      # faq accordion loop item
       - name : "Does OpenStack & OpenInfra Indonesia have a basecamp?"
         bullet_point:
           - No. Our administrators come from various cities in Indonesia but we usually hold regular meetups every month in different cities.
@@ -19,8 +19,8 @@ faq:
           - Please submit your interest to us via email at volunteers@openinfra.id   
 
   - title : "Regular Meetup"
-    job_accordion:
-      # job accordion loop item
+    faq_accordion:
+      # faq accordion loop item
       - name : "When and where regular meetups will be held?"
         bullet_point:
           - Regular meetups are held once a month, everywhere in Indonesia (possible to held in your city also!)
