modified:   data/en/faq.yml 	modified:   data/id/faq.yaml

--- a/data/id/faq.yaml
+++ b/data/id/faq.yaml
@@ -24,7 +24,7 @@ faq:
       - name : "Kapan dan di mana regular meetup diadakan?"
         bullet_point:
           - Regular meetup diadakan tiap 1 bulan sekali, untuk kotanya dimana saja di Indonesia
-          - Biasanya hari Sabtu, di Minggu terakhir setiap bulannya
+          - Biasanya hari Sabtu, pada Minggu terakhir setiap bulannya
       - name : "Apakah regular meetup berbayar?"
         bullet_point:
           - Tidak, regular meetup tidak dipungut biaya alias gratis, silakan bergabung dan ajak teman-temanmu untuk datang.
