--- a/data/en/about.yml
+++ b/data/en/about.yml
@@ -22,6 +22,7 @@ company_profile:
       icon : "fa-money" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
       title : "Donation"
       content : "Scan QRIS to make a donation"
+      image : "/images/qris.jpg" 
 
 ############################### funfact ##################################
 funfact:
